update documentation with current performance data and optimization history
README.md:
- Rewrite opening to reflect jjq as independent high-performance engine
- Add jjq-jakarta module to modules table
- Update performance section with 3 comparison tables (parse, queries, serialize)
- Add Quick Start examples for byte[] parsing, Builder API, jjq-jakarta integration
- Update value system and architecture sections with parallel arrays, deferred
  strings, hash index, field name interning, SWAR scanning
- Update version to 0.1.4-SNAPSHOT

docs/perf-backlog.md:
- Document all completed optimizations (#4-#22) with impact metrics
- Update open items with current priority and status
- Add performance journey summary tables (parsing, serialization, queries)
- Add research references section

docs/profiling-guide.md:
- Add benchmark classes table with descriptions and run times
- Add three-layer profiling recipe (gc + cpu flamegraph + alloc flamegraph)
- Add JOL object layout analysis instructions
- Update prerequisites to include jjq-fastjson2

docs/performance.md (new):
- Comprehensive performance guide with current benchmark numbers
- Optimization details for each technique (deferred strings, interning,
  digit accumulation, byte[] parsing, SWAR, shape detection, fused opcodes,
  parallel arrays, StringBuilder reuse)
- Best practices section (compile once, prefer byte[], use Builder, streaming)